MAINTAINERCLEANFILES=Makefile.in
ohelpdir=$(datadir)/@PACKAGE@/help/opers
ohelp_DATA= accept \
                admin \
                away \
                capab \
                cburst \
                challenge \
                client \
                close \
                cmode \
                connect \
                cryptlink \
                die \
                dline \
                drop \
                eob \
                error \
                etrace \
                gline \
                hash \
                help \
                index \
                info \
                invite \
                ison \
                join \
                kick \
                kill \
                kline \
                knock \
                links \
                list \
                locops \
                lusers \
                map \
                modlist \
                modload \
                modrestart \
                modunload \
                motd \
                names \
                nick \
                notice \
                omotd \
                oper \
                operwall \
                part \
                pass \
                ping \
                pong \
                post \
                privmsg \
                quit \
                rehash \
                restart \
                resv \
                rkline \
                rxline \
                server \
                set \
                sjoin \
                squit \
                stats \
                svinfo \
                testgecos \
                testline \
                testmask \
                time \
                topic \
                trace \
                uhelp \
                umode \
                undline \
                ungline \
                unkline \
                unresv \
                unxline \
                user \
                userhost \
                users \
                version \
                wallops \
                who \
                whois \
                whowas \
                xline
